corrección Scans